<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        layout="@layout/toobar"
        />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="20dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        android:paddingBottom="15dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/pin_1"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:textSize="15dp"
            android:background="@drawable/shap_bk_1"
            android:maxLines="1"
            android:maxLength="12"
            android:inputType="textPassword"
            android:id="@+id/et_old_pin"
            android:hint="@string/pin_4"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"
        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/pin_2"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:textSize="15dp"
            android:background="@drawable/shap_bk_1"
            android:paddingRight="5dp"
            android:hint="@string/pin_5"
            android:maxLines="1"
            android:maxLength="12"
            android:inputType="textPassword"
            android:id="@+id/et_pin"
            />

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="15dp"
        android:paddingRight="16dp"
        android:paddingLeft="16dp"

        >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16dp"
            android:text="@string/pin_3"
            android:paddingTop="7dp"
            android:paddingBottom="7dp"
            android:layout_gravity="center_vertical"
            android:textColor="@color/black"
            />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:paddingLeft="5dp"
            android:textSize="15dp"
            android:id="@+id/et_confirm_pin"
            android:background="@drawable/shap_bk_1"
            android:paddingRight="5dp"
            android:maxLines="1"
            android:maxLength="12"
            android:inputType="textPassword"
            android:hint="@string/pin_6"
            />

    </LinearLayout>

    <Button
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="50dp"
        android:textColor="@color/white"
        android:textSize="20dp"
        android:text="@string/update"
        android:background="@drawable/shape_btn"
        android:id="@+id/btn_update"
        />




</LinearLayout>